--- a/style.css
+++ b/style.css
@@ -1,27 +1,44 @@
 body {
   font-family: 'Lato', sans-serif;
-  
+  margin: 0;
+
 }
-.home-page{
+
+.home-page {
   height: 100%;
   width: 100%;
   font-size: 24px;
   color: azure;
-  background-image: url("images/hand-donation.jpg");
-   background-repeat: no-repeat;
-   background-size: 100% 100%; 
-   text-align: center;
-}
-h1 {
-  text-size-adjust: 30px;
-}
-strong{
-  text-size-adjust: 26px;
-  color: cadetblue;
-}
-.button{
-  background-color: tomato;
+  background-image: url(images/donation1.jpg);
   background-repeat: no-repeat;
-  width: 100px;
-  
+  background-size: 100% 100%;
+  text-align: center;
+  padding-top: 20px;
+  padding-bottom: 100px;
+}
+
+h1 {
+  font-size: 60px;
+  padding-left:30px;
+}
+
+.short-text {
+  padding: 0px 50px 20px 50px;
+  margin-top: 0;
+  margin-bottom: 20px;
+}
+
+strong {
+  font-size: 26px;
+  color: cyan;
+}
+
+.button {
+  text-decoration: none;
+  background-image: linear-gradient(orange yellow);
+  background-color: aquamarine;
+  border-radius: 6px;
+  font-weight: 700;
+  padding: 10px;
+
 }
