--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
-body {
+* {
   font-family: 'Lato', sans-serif;
   margin: 0;
+  padding:0;
 
 }
 
@@ -9,9 +10,10 @@ body {
   width: 100%;
   font-size: 24px;
   color: azure;
-  background-image: url(images/donation1.jpg);
+  background-image: url(images/hand-donation.jpg);
   background-repeat: no-repeat;
-  background-size: 100% 100%;
+  background-size: 100% 60%;
+  position: absolute;
   text-align: center;
   padding-top: 20px;
   padding-bottom: 100px;
@@ -19,7 +21,7 @@ body {
 
 h1 {
   font-size: 60px;
-  padding-left:30px;
+  padding-left: 30px;
 }
 
 .short-text {
