--- a/style.css
+++ b/style.css
@@ -24,6 +24,10 @@ h1 {
   padding-left: 30px;
 }
 
+.main-header{
+       padding-top: 125px;
+}
+
 .short-text {
   padding: 0px 50px 20px 50px;
   margin-top: 0;
